@@ -55,6 +55,7 @@ private:
 
     BinaryInputPort* const port_;
     Transcoder* const transcoder_;
+    bool isClosed_;
 };
 
 } // namespace scheme
